fix(cng):correggi il calcolo della deviazione
